--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -2,15 +2,18 @@ PROG := ex01
 
 COMPILER := g++
 FLAGS := -Wall -Wextra -Werror
-FLAGS_ALT := -std=c++98
+FLAGS_ADD := -std=c++98
 SRCS =	main.cpp \
 		ClapTrap.cpp \
 		ScavTrap.cpp
 
 OBJS := $(SRCS:.cpp=.o)
 
+%.o: %.cpp
+	$(COMPILER) $(FLAGS) $(FLAGS_ADD) -c $< -o $@
+
 $(PROG): $(OBJS)
-	$(COMPILER) $(FLAGS) -o $@ $(OBJS)
+	$(COMPILER) $(FLAGS) $(FLAGS_ADD) -o $@ $(OBJS)
 
 all: $(PROG)
 
