--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,8 +1,8 @@
 PROG := fragtrap
 
 CXX := c++
-FLAGS := -Wall -Wextra -Werror
-FLAGS_ADD := -std=c++98
+CXXFLAGS := -Wall -Wextra -Werror
+CXXFLAGS += -std=c++98
 SRCS =	main.cpp \
 		ClapTrap.cpp \
 		ScavTrap.cpp \
@@ -10,11 +10,8 @@ SRCS =	main.cpp \
 
 OBJS := $(SRCS:.cpp=.o)
 
-%.o: %.cpp
-	$(CXX) $(FLAGS) $(FLAGS_ADD) -c $< -o $@
-
 $(PROG): $(OBJS)
-	$(CXX) $(FLAGS) $(FLAGS_ADD) -o $@ $(OBJS)
+	$(CXX) $(CXXFLAGS) -o $@ $(OBJS)
 
 all: $(PROG)
 
